--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/blur": "^4.4.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -24,6 +29,7 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^15.2.0",
     "react-native-vector-icons": "^10.1.0",
     "zustand": "^4.5.2"
   },
